--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
         </div>
     </div>
   <script id="ss-spot-script">(function(){var e="ss-widget",t="script",a=document,r=window;var s,n,c;r.SP_TARGET_TOKEN="tar-vSthCvqoN3eEN1AHVjm1zi";r.SS_SP_ACCOUNT="pmspotcheck.talksparrow.com";r.SS_SURVEY_NAME="Sample";if(!a.getElementById(e)){var S=function(){S.update(arguments)};S.args=[];S.update=function(e){S.args.push(e)};r.SpotCheckLauncher=S;s=a.getElementsByTagName(t);c=s[s.length-1];n=a.createElement(t);n.type="text/javascript";n.async=!0;n.id=e;n.src=["https://","pmspotcheck.talksparrow.com/spotcheck/widget/",r.SP_TARGET_TOKEN].join("");c.parentNode.insertBefore(n,c)}})();</script>
-<script> window.SpotCheckLauncher('popup', {userDetails: {},variables: {}, properties: {}});</script> 
+<script> window.SpotCheckLauncher('popup', {userDetails: {email:"amal.anush@surveysparrow.com"},variables: {}, properties: {}});</script> 
 </body>
 </html>
